Attempt to fix hero image in place as it is not showing up on deployed version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,11 +100,12 @@ main {
 .hero {
     height: 600px;
     width:100%;
-    background-color: lightgreen;
-    background: url("../images/physical-theatre.jpg") no-repeat center center/cover;
+    background-color: #ffffff;
+    background: url("../images/physical-theatre.jpg") no-repeat center center/cover fixed;
     background-attachment: fixed;
 
 }
+
 
 /* Section 1 */
 .about_us {
